--- a/PresentationLayer/Views/TodayInfo/Info.cshtml
+++ b/PresentationLayer/Views/TodayInfo/Info.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PresentationLayer.DTOs
-@model ICollection<DishDTO>
+@model ICollection<DailyUserInfoDTO>
 @{
     Layout = null;
 }
@@ -8,15 +8,28 @@
 
 <html>
 <head>
-    <title>Dishes</title>
+    <title>Info</title>
 </head>
 <body>
-    <h2>Dishes</h2>
-    @foreach (var dish in Model)
+    <a asp-area="" asp-controller="Dish" asp-action="DishList">List of Dishes</a>
+    <div>User</div>
+    @foreach (var dailyInfo in Model)
     {
         <div>
-            @dish.Id.@dish.Name - @dish.KCalorie (Fat - @dish.TotalFat, Proteins - @dish.Protein, Carbongidrates - @dish.Carbohydrates)
-        </div>
+            @{
+                var goal = "";
+                if (dailyInfo.KCalorieGoal != null)
+                    goal = $" / {dailyInfo.KCalorieGoal}";
+            }
+            @dailyInfo.Date.ToString("d"), @dailyInfo.KCalorieReal@goal kcal
+            @foreach (var dish in dailyInfo.Dishes)
+            {
+                <p>
+                    @dish.Name - @dish.KCalorie kcal
+                </p>
+            }
+        </div><br />
     }
 </body>
 </html>
+
