--- a/PresentationLayer/wwwroot/css/DishList.css
+++ b/PresentationLayer/wwwroot/css/DishList.css
@@ -21,9 +21,9 @@
     color: gold;
 }
 
-    .header-link:hover, .header-siteName:hover {
-        text-shadow: 0 2px 18px black;
-    }
+.header-link:hover, .header-siteName:hover {
+    text-shadow: 0 2px 18px black;
+}
 
 .header-siteName {
     left: 10px;
@@ -32,7 +32,22 @@
 .header-link {
     right: 10px;
 }
-/*search*/
+/*table*/
+.tableHead{
+    font-weight: bold;
+}
 .search{
-
+    width:200px;
+}
+.search, .min-calorie, .max-calorie{
+    border-radius: 10px;
+    border: 1px solid grey;
+    height: 20px;
+    padding-left: 5px;
+}
+.min-calorie, .max-calorie {
+    width: 65px;
+}
+.min-calorieHead{
+    text-align:right;
 }
