Added Chart generating by user info

--- a/PresentationLayer/Views/Dish/DishList.cshtml
+++ b/PresentationLayer/Views/Dish/DishList.cshtml
@@ -40,7 +40,7 @@
                             <nav class="site-navbar">
                                 <ul>
                                     <li><a asp-controller="TodayInfo" asp-action="Info">Home</a></li>
-                                    <li><a asp-controller="TodayInfo" asp-action="Info">All Time Stats</a></li>
+                                    <li><a asp-controller="AllTimeInfo" asp-action="Chart">All Time Stats</a></li>
                                     <li><a class="active" asp-controller="Dish" asp-action="DishList">Dish List</a></li>
                                     <li><a asp-controller="TodayInfo" asp-action="Info">About</a></li>
                                 </ul>
