--- a/PresentationLayer/Views/Dish/DishList.cshtml
+++ b/PresentationLayer/Views/Dish/DishList.cshtml
@@ -42,7 +42,7 @@
                                     <li><a asp-controller="TodayInfo" asp-action="Info">Home</a></li>
                                     <li><a asp-controller="AllTimeInfo" asp-action="Chart">All Time Stats</a></li>
                                     <li><a class="active" asp-controller="Dish" asp-action="DishList">Dish List</a></li>
-                                    <li><a asp-controller="TodayInfo" asp-action="Info">About</a></li>
+                                    <li><a asp-controller="About" asp-action="About">About</a></li>
                                 </ul>
                             </nav>
                         </div>
